--- a/assets/stylee.css
+++ b/assets/stylee.css
@@ -31,9 +31,15 @@ body
 {
     color: #fff !important;
     font-weight: 600;
+    float: right;
+    text-align: left;
 }
 .fa-bars
 {
     color:#fff;
     font-size: 30px !important;
+}
+.navbar-toggler
+{
+    outline: none !important;
 }
