--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 .background {
   height: 100vh;
-  background: black;
 }
 
 .background img {
@@ -8,10 +7,23 @@
   position: absolute;
   height: 100vh;
   object-fit: cover;
+  z-index: -1;
 }
 
 .front-layer {
   z-index: 2;
+}
+
+.landing-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50%, -50%);
+}
+
+.landing-content * {
+  color: aliceblue;
 }
 
 .mid-layer {
@@ -20,4 +32,13 @@
 
 .back-layer {
   z-index: 0;
+}
+
+.mulai-perjalanan {
+  position: absolute;
+  left: 50%;
+  bottom: 10%;
+  color: aliceblue;
+  text-align: center;
+  transform: translate(-50%, -50%);
 }
