--- a/style.css
+++ b/style.css
@@ -43,10 +43,42 @@
   transform: translate(-50%, -50%);
 }
 
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: lightblue;
+  z-index: -2;
+}
+
 #landing-page {
   display: none;
 }
 
-/* #slider {
+#slider {
   display: none;
-} */
+}
+
+.micky-team {
+  font-family: Georgia, serif;
+  position: absolute;
+  opacity: 0;
+  z-index: 6;
+}
+
+.background-landing-animation {
+  height: 100vh;
+  width: 100vw;
+  background-color: darkslategray;
+  position: absolute;
+}
+
+.sliderAnimation {
+  background-color: aliceblue;
+  height: 175px;
+  width: 175px;
+  border-radius: 90pt;
+  z-index: 5;
+}
